--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
@@ -19,7 +20,8 @@
     "react-native-pixel-perfect": "^1.0.2",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
