--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "victory": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
